# gpt_dynamodb_action

./: .env.example  .gitignore  README.md  pyproject.toml
src/gpt_dynamodb_action/: main.py
src/gpt_dynamodb_action/routes/: __init__.py  api.py  get_item_endpoint.py  query_endpoint.py  scan_endpoint.py  schema_endpoints.py
src/gpt_dynamodb_action/utils/: dynamo_helpers.py
